[gd_scene load_steps=2 format=3 uid="uid://djvrv6hb41uk6"]

[ext_resource type="Script" uid="uid://65v2avn1guhs" path="res://Script/UI/game_over.gd" id="1_jxkuk"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jxkuk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = -86.5
offset_right = 62.5
offset_bottom = 86.5
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SCORE"

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "HAS PERDIDO"

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "HIGH SCORE
"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "RESTART"

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Menu principal"

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
